--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.google.firebase:firebase-core:11.2.2'
     compile 'com.google.firebase:firebase-database:11.2.2'
     testCompile 'junit:junit:4.12'
 }
